2006-02-13  Tom Tromey  <tromey@redhat.com>

	* vm/reference/java/lang/reflect/Method.java: Javadoc fix.
	* vm/reference/java/lang/reflect/Constructor.java: Javadoc fix.

2006-02-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(offscreenBuffers): New field.
	(doubleBuffer): Removed field.
	(repaintUnderway): New field.
	(commitRequests): New field.
	(RepaintManager): Initialize new fields.
	(paintDirtyRegions): Handle repaintUnderway flag. Commit
	buffers when done.
	(getOffscreenBuffer): Returns the offscreen buffer for the
	corresponding root component.
	(commitBuffer): New method.
	(commitRemainingBuffers): New method.
	* javax/swing/JComponent.java
	(paint): Call paintDoubleBuffered with the current clip.
	(paintImmediately2): Don't paint on screen here.
	(paintDoubleBuffered): Rewritten for real double buffering.
	(paintSimple): Draw to screen in this method.

2006-02-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JRootPane.java
	(JRootPane): Set opaque property to true.

2006-02-13  Tom Tromey  <tromey@redhat.com>

	* .classpath: Updated for external/relaxngDatatype.

2006-02-13  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/UnicodeReader.java,
	  gnu/xml/validation/datatype/Annotation.java,
	  gnu/xml/validation/datatype/AnySimpleType.java,
	  gnu/xml/validation/datatype/AnyType.java,
	  gnu/xml/validation/datatype/AnyURIType.java,
	  gnu/xml/validation/datatype/AtomicSimpleType.java,
	  gnu/xml/validation/datatype/Base64BinaryType.java,
	  gnu/xml/validation/datatype/BooleanType.java,
	  gnu/xml/validation/datatype/ByteType.java,
	  gnu/xml/validation/datatype/DateTimeType.java,
	  gnu/xml/validation/datatype/DateType.java,
	  gnu/xml/validation/datatype/DecimalType.java,
	  gnu/xml/validation/datatype/DoubleType.java,
	  gnu/xml/validation/datatype/DurationType.java,
	  gnu/xml/validation/datatype/EntitiesType.java,
	  gnu/xml/validation/datatype/EntityType.java,
	  gnu/xml/validation/datatype/EnumerationFacet.java,